--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,46 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | Product preview card component</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <picture class="product__img">
+        <source
+          media="(min-width: 37.5em)"
+          srcset="assets/images/image-product-desktop.jpg"
+        />
+        <img src="assets/images/image-product-mobile.jpg" alt="Product Image" />
+      </picture>
+      <div class="product__info">
+        <p class="product__category">Perfume</p>
+        <h1 class="heading-primary">Gabrielle Essence Eau De Parfum</h1>
+        <p class="product__description">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="product__price">
+          <p class="product__price--sale">$149.99</p>
+          <p class="product__price--standard">$169.99</p>
+        </div>
+        <a href="#" class="btn">
+          <img
+            src="assets/images/icon-cart.svg"
+            alt="Cart Icon"
+            class="btn__icon"
+          />
+          Add to Cart
+        </a>
+      </div>
+    </main>
+  </body>
 </html>
